archived-files/tested-k8s-deploy/three-tier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-ingress
  namespace: three-tier
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # THIS IS THE TRIGGER:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mysite06.duckdns.org
      secretName: myapp-tls-prod # cert-manager will create this secret
  rules:
    - host: mysite06.duckdns.org
      http:
        paths:
          - path: /api/tasks
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
